--- a/Ejercicios UX_UI/estiloscss.css
+++ b/Ejercicios UX_UI/estiloscss.css
@@ -59,4 +59,20 @@ table, th, td {
   border:0px solid black;
 }
 
+.carousel {
+  display: flex;
+  overflow-x: scroll;
+  scroll-snap-type: x mandatory;
+  width: 100%;
+  height: 300px;
+}
 
+.card {
+  flex: 0 0 auto;
+  width: 300px;
+  margin-right: 10px;
+  scroll-snap-align: start;
+  background-color: #f0f0f0;
+  padding: 20px;
+
+}
